Add model template

--- a/src/content/models/vgg-16-19/vgg-16-19.md
+++ b/src/content/models/vgg-16-19/vgg-16-19.md
@@ -4,4 +4,4 @@ slug: vgg-16-19
 date: 2019-06-03
 ---
 
-VGG is ...
+VGG 16/19 is a convolutional neural network from The Visual Geometry Group at The University of Oxford.
